--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
   background-color: white;
-  background-image: url('http://janmichl.com/parchment.jpg');
+  background-image: url("http://janmichl.com/parchment.jpg");
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -15,7 +15,6 @@ body {
   width: 100%;
   font-size: 0.8125rem;
 }
-
 
 /* styling for on-page bibliography heading */
 .bibliography__heading .bibliography__heading-text {
@@ -31,12 +30,16 @@ body {
 }
 
 /* styling for publication entries in list */
-.publication-entry { 
+.publication-entry {
   margin-bottom: 1rem;
 }
 
 .publication-entry .publication-entry__title {
   margin-bottom: 0.25rem;
+}
+
+.publication-entry .not-bold {
+  font-weight: 400;
 }
 
 .publication-entry .publication-entry__title a {
